fix: resolve frontend test issues and improve test coverage
- Added Vitest reference to Vite configuration to resolve type errors.
- Deleted unnecessary SQLite WAL and SHM files.
- Updated assembly information for ContactAgendaApi with new version.
- Created comprehensive test summaries for frontend components and stores.
- Simplified unit tests for ContactCard and ContactForm components, focusing on logic and validation.
- Enhanced error handling and validation logic in ContactForm tests.
- Improved integration tests for App component to verify structure and accessibility.
- Established basic functionality tests for Contact Store with type safety checks.

--- a/contact-agenda-frontend/package.json
+++ b/contact-agenda-frontend/package.json
@@ -6,7 +6,13 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest",
+    "test:run": "vitest run",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest run --coverage",
+    "test:fixed": "vitest run src/test/basic.test.ts src/test/services/contactService.test.ts src/test/stores/contactStore.fixed.test.ts src/test/components/components.fixed.test.ts src/test/components/ContactCard.fixed.test.ts src/test/components/ContactForm.fixed.test.ts",
+    "test:all-fixed": "npm run test:fixed"
   },
   "dependencies": {
     "@primeuix/themes": "^1.2.1",
