--- a/contact-agenda-frontend/package.json
+++ b/contact-agenda-frontend/package.json
@@ -19,7 +19,8 @@
     "axios": "^1.10.0",
     "pinia": "^3.0.3",
     "primevue": "^4.3.6",
-    "vue": "^3.5.17"
+    "vue": "^3.5.17",
+    "vue-router": "^4.4.5"
   },
   "devDependencies": {
     "@types/jsdom": "^21.1.7",
