--- a/contact-agenda-frontend/nginx-simple.conf
+++ b/contact-agenda-frontend/nginx-simple.conf
@@ -66,6 +66,18 @@ http {
         add_header X-XSS-Protection "1; mode=block" always;
         add_header Referrer-Policy "no-referrer-when-downgrade" always;
 
+        # Proxy API requests to backend
+        location /api/ {
+            proxy_pass http://host.docker.internal:8081/api/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_connect_timeout 30s;
+            proxy_send_timeout 30s;
+            proxy_read_timeout 30s;
+        }
+
         # Handle Vue.js routing (SPA)
         location / {
             try_files $uri $uri/ /index.html;
